Undo mustache patch